--- a/front/front.index.html
+++ b/front/front.index.html
@@ -23,7 +23,10 @@
     <main>
         <section class="casas">
         </section>
-
+        <div  class = "interludio">
+            <img src="./assets/logorayo.png" class="logotipo" alt="">
+        <h2>PERSONAJES</h2>
+    </div>
         <section class="personajes">
             
         </section>
