vuelta de escudo

--- a/front/front.index.html
+++ b/front/front.index.html
@@ -21,8 +21,11 @@
         </ul>
     </nav>
     <main>
-        <section class="casas">
+        <div class="flip-card">
+        <section class="casas flip-card-inner">
         </section>
+        </div>
+        
         <div  class = "interludio">
             <img src="./assets/logorayo.png" class="logotipo" alt="">
         <h2>PERSONAJES</h2>
