--- a/front/front.index.html
+++ b/front/front.index.html
@@ -34,8 +34,13 @@
         <section class="personajes">
             
         </section>
+        <div class = interludio>
+            <img src="https://cdn-icons-png.flaticon.com/512/867/867906.png" class="logotipo"  alt="varita_logo">
+            <h1>VARITAS</h1>
+        </div>
+        <div class ="varitas"></div>
 
-        <section class="varitas">
+        <section >
 
 
 
